--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,19 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1",
-    "ffprobe-static": "^3.1.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "gridfs-stream": "^1.1.1",
-    "helmet": "^8.1.0",
-    "joi": "^18.0.1",
     "mongoose": "^8.19.3",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^2.0.2"
   }
 }
